# ITMO-labs

1 семестр Алгоритмы на C++/lab1/: CMakeLists.txt  justfile
1 семестр Алгоритмы на C++/lab1/include/: functions.hpp
1 семестр Алгоритмы на C++/lab1/src/: main.cpp
1 семестр Алгоритмы на C++/lab2/: .gitignore  CMakeLists.txt  justfile
1 семестр Алгоритмы на C++/lab2/include/: array.hpp
1 семестр Алгоритмы на C++/lab2/src/: main.cpp
1 семестр Алгоритмы на C++/lab2/tests/: array.cpp
1 семестр Алгоритмы на C++/lab3/: .clangd  CMakeLists.txt  insertion_results.txt  justfile  plot.py  quick_results.txt
1 семестр Алгоритмы на C++/lab3/.zed/: debug.json
1 семестр Алгоритмы на C++/lab3/benchmarks/: quick_vs_insertion.cpp
1 семестр Алгоритмы на C++/lab3/include/: sort.hpp
1 семестр Алгоритмы на C++/lab3/src/: main.cpp
1 семестр Алгоритмы на C++/lab3/tests/: sort.cpp
1 семестр Алгоритмы на C++/lab4/: .gitignore  CMakeLists.txt  justfile  stat_plots.xlsx
1 семестр Алгоритмы на C++/lab4/src/: main.cpp
